<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"></androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="-120dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/rifaniisa"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="3dp" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/name"
                style="@style/StyleProfile"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_below="@+id/name"
                style="@style/StyleProfile"
                android:text="@string/emailUser"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_below="@id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/instagram"
                style="@style/IconAction"
                android:src="@drawable/ic_instagram"
                android:title="@string/instagram" />

            <ImageView
                android:id="@+id/twitter"
                style="@style/IconAction"
                android:src="@drawable/ic_twitter"
                android:text="@string/twitter" />

            <ImageView
                android:id="@+id/linkedin"
                style="@style/IconAction"
                android:src="@drawable/ic_linkedin"
                android:text="@string/linked_in" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>